<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of irSSHi - Android SSH client
  ~ Copyright (c) 2013. riku salkia <riksa@iki.fi>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- Strings that should be localized -->
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>

    <!-- Host List fragment-->
    <!-- menu items -->
    <string name="menu_create">Create</string>
    <string name="menu_import">Import</string>

    <!-- context menu items -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <!-- edit host dialog -->
    <string name="add_host">Add host</string>
    <string name="edit_host">Edit host</string>
    <string name="validation_error_hostname">Hostname can not be empty</string>
    <string name="validation_error_username">Username can not be empty</string>
    <string name="validation_error_nickname">Nickname can not be empty</string>
    <string name="validation_error_port">Port has to be between 0 and 65536</string>

    <string name="nickname_hint">Nickname</string>
    <string name="username_hint">Username</string>
    <string name="hostname_hint">Host</string>
    <string name="port_hint">Port</string>

    <!-- fragment_host_list -->
    <string name="host_list_empty">Add a host</string>


    <!-- password prompt dialog -->
    <string name="dialog_password_message">Enter password</string>
    <string name="dialog_password_title">Password</string>
    <string name="dialog_password_ok">Ok</string>
    <string name="dialog_password_cancel">Cancel</string>
    <string name="dialog_password_hint">Password</string>

    <!-- TerminalTabFragment -->
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="close_tab">Close tab</string>
    <string name="tutorial_label">Welcome to IrSSHi</string>

    <!-- TutorialActivity -->
    <string name="button_next">Next</string>
    <string name="button_prev">Previous</string>
    <string name="generate_key">Generate key</string>

    <!-- KeyGenerationDialogFragment -->
    <string name="key_generation_dialog_title">Generate new key pair</string>
    <string name="import_private_key">Import Private Key</string>
    <string name="prompt_key_type">Key type</string>
    <string name="prompt_key_bits">Key strength</string>
    <string name="button_generate_key">Generate Key</string>
    <string name="dialog_password_hint_1">Password</string>
    <string name="dialog_password_hint_2">Password (again)</string>
    <string name="dialog_alias_hint">Key alias (e.g. \'default\')</string>
    <string name="validation_error_password">Passwords do not match</string>
    <string name="host_list_title">Hosts</string>

    <!-- irSSHiActivity -->
    <string name="irsshi_title">irSSHi</string>
    <string name="menu_generate_key">Generate key kair</string>
    <string name="menu_import_key">Import key pair</string>
    <string name="button_browse">Browse</string>
    <string name="browse_hint">Choose private key</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_cannot_read_file">Can not read file</string>
    <string name="key_import_dialog_title">Import private key</string>
    <string name="button_import_key">Import key</string>
    <string name="validation_error_keyfile">Choose private key</string>
    <string name="error_key_import">Unable to import key</string>
    <string name="error_io_exception">Can not read file</string>
    <string name="validation_error_keyfile_missing">Choose valid private key</string>
    <string name="validation_error_keyfile_invalid">Invalid private key</string>
    <string name="prompt_keypair">Key pair</string>
    <string name="prompt_host_type">Host type</string>
    <string name="spinner_select_keypair">Choose key pair...</string>


</resources>
