<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner"
                style="@style/dialog_spinner"
                android:entries="@array/host_types"/>

            <EditText
                style="@style/dialog_edit"
                android:hint="@string/nickname_hint"
                android:id="@+id/nickname"/>

            <EditText
                style="@style/dialog_edit"
                android:hint="@string/username_hint"
                android:id="@+id/username"/>

            <EditText
                style="@style/dialog_edit"
                android:hint="@string/hostname_hint"
                android:inputType="textUri"
                android:id="@+id/hostname"/>

            <EditText
                style="@style/dialog_edit"
                android:inputType="number"
                android:hint="@string/port_hint"
                android:id="@+id/port"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/cancel"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/ok"/>

    </LinearLayout>

</LinearLayout>