<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of irSSHi - Android SSH client
  ~ Copyright (c) 2013. riku salkia <riksa@iki.fi>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_create"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/menu_create"
        android:showAsAction="ifRoom|withText" />

    <!-- TODO: icon -->
    <item
        android:id="@+id/menu_generate_key"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/menu_generate_key"/>

    <!-- TODO: icon -->
    <item
        android:id="@+id/menu_import_key"
        android:icon="@drawable/ic_menu_archive"
        android:title="@string/menu_import_key"/>

</menu>