<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of irSSHi - Android SSH client
  ~ Copyright (c) 2013. riku salkia <riksa@iki.fi>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<TextView-->
            <!--style="@style/label"-->
            <!--android:text="Key type"/>-->
            <!---->
            <EditText
                android:layout_alignParentTop="true"
                android:id="@+id/alias"
                style="@style/dialog_edit"
                android:hint="@string/dialog_alias_hint"/>

            <Button
                style="@style/button_browse"
                android:layout_alignBaseline="@+id/private_key_path"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:text="@string/button_browse"
                android:id="@+id/button_browse"/>

            <EditText
                style="@style/dialog_edit"
                android:editable="false"
                android:layout_toLeftOf="@+id/button_browse"
                android:hint="@string/browse_hint"
                android:layout_below="@+id/alias"
                android:id="@+id/private_key_path"/>


        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_import_key"
            style="@style/button"
            android:layout_width="match_parent"
            android:text="@string/button_import_key"/>

    </LinearLayout>

</LinearLayout>

